seaqt/QtMultimedia/gen_qcamerafocus.h

class QCameraFocus;
class QCameraFocusZone;
class QMetaObject;
class QPointF;
class QRectF;
typedef struct QCameraFocus QCameraFocus;
typedef struct QCameraFocusZone QCameraFocusZone;
typedef struct QMetaObject QMetaObject;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
QCameraFocusZone* QCameraFocusZone_new();
QCameraFocusZone* QCameraFocusZone_new2(QRectF* area);
QCameraFocusZone* QCameraFocusZone_new3(QCameraFocusZone* other);
QCameraFocusZone* QCameraFocusZone_new4(QRectF* area, int status);
void QCameraFocusZone_operatorAssign(QCameraFocusZone* self, QCameraFocusZone* other);
bool QCameraFocusZone_operatorEqual(const QCameraFocusZone* self, QCameraFocusZone* other);
bool QCameraFocusZone_operatorNotEqual(const QCameraFocusZone* self, QCameraFocusZone* other);
bool QCameraFocusZone_isValid(const QCameraFocusZone* self);
QRectF* QCameraFocusZone_area(const QCameraFocusZone* self);
int QCameraFocusZone_status(const QCameraFocusZone* self);
void QCameraFocusZone_setStatus(QCameraFocusZone* self, int status);
void QCameraFocusZone_delete(QCameraFocusZone* self);
QMetaObject* QCameraFocus_metaObject(const QCameraFocus* self);
void* QCameraFocus_metacast(QCameraFocus* self, const char* param1);
int QCameraFocus_metacall(QCameraFocus* self, int param1, int param2, void** param3);
struct seaqt_string QCameraFocus_tr(const char* s);
struct seaqt_string QCameraFocus_trUtf8(const char* s);
bool QCameraFocus_isAvailable(const QCameraFocus* self);
int QCameraFocus_focusMode(const QCameraFocus* self);
void QCameraFocus_setFocusMode(QCameraFocus* self, int mode);
bool QCameraFocus_isFocusModeSupported(const QCameraFocus* self, int mode);
int QCameraFocus_focusPointMode(const QCameraFocus* self);
void QCameraFocus_setFocusPointMode(QCameraFocus* self, int mode);
bool QCameraFocus_isFocusPointModeSupported(const QCameraFocus* self, int param1);
QPointF* QCameraFocus_customFocusPoint(const QCameraFocus* self);
void QCameraFocus_setCustomFocusPoint(QCameraFocus* self, QPointF* point);
struct seaqt_array /* of QCameraFocusZone* */  QCameraFocus_focusZones(const QCameraFocus* self);
double QCameraFocus_maximumOpticalZoom(const QCameraFocus* self);
double QCameraFocus_maximumDigitalZoom(const QCameraFocus* self);
double QCameraFocus_opticalZoom(const QCameraFocus* self);
double QCameraFocus_digitalZoom(const QCameraFocus* self);
void QCameraFocus_zoomTo(QCameraFocus* self, double opticalZoom, double digitalZoom);
void QCameraFocus_opticalZoomChanged(QCameraFocus* self, double param1);
void QCameraFocus_connect_opticalZoomChanged(QCameraFocus* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QCameraFocus_digitalZoomChanged(QCameraFocus* self, double param1);
void QCameraFocus_connect_digitalZoomChanged(QCameraFocus* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QCameraFocus_focusZonesChanged(QCameraFocus* self);
void QCameraFocus_connect_focusZonesChanged(QCameraFocus* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QCameraFocus_maximumOpticalZoomChanged(QCameraFocus* self, double param1);
void QCameraFocus_connect_maximumOpticalZoomChanged(QCameraFocus* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QCameraFocus_maximumDigitalZoomChanged(QCameraFocus* self, double param1);
void QCameraFocus_connect_maximumDigitalZoomChanged(QCameraFocus* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
struct seaqt_string QCameraFocus_tr2(const char* s, const char* c);
struct seaqt_string QCameraFocus_tr3(const char* s, const char* c, int n);
struct seaqt_string QCameraFocus_trUtf82(const char* s, const char* c);
struct seaqt_string QCameraFocus_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QCameraFocus_staticMetaObject();